Python HTML Generator, correct CSS for scrollbars

--- a/window/FlagIt.css
+++ b/window/FlagIt.css
@@ -1,3 +1,12 @@
-html, body {
-  width: 500;
+body{
+  overflow-y:scroll;
+}
+
+
+.missing {
+  opacity: 0.5;
+}
+
+.found{
+  opacity: 1.0;
 }
